Build authentication operation for refresh token